@@ -17,6 +17,7 @@ Bug Fixes:
 CAY-2319 Modeler: Embeddable > Attributes. Undo does not cancel pasted objects
 CAY-2323 Modeler: Graph. No warning while saving the image with existing name
 CAY-2331 cgen: broken templates for data map
+CAY-2349 Cache issue: 'SelectQuery' with prefetches loses relationships
 
 ----------------------------------
 Release: 4.0.B1
